--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,5 +7,36 @@
 
     <body>
         <h1>Lasagna</h1>
+        <h2>The italian classic, lovingly prepared without any humans harmed</h2>
+        <img src="../images/lasagna.webp" height = "250" width = "250">
+        <p>Prepare this easy homemade lasagne ahead of time and save in the freezer, uncooked, for when you need it during a busy week. Just bake for an extra 45 mins. We are proud to bringing you recipes that are confirmed to contain no human meat.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>1 pound of spaghetti noodles</li>
+            <li>3 cups of orange juice</li>
+            <li>2 tablespoons of olive oil</li>
+            <li>1 large onion, chopped</li>
+            <li>4 cloves of garlic, minced</li>
+            <li>2 pounds of ground chicken</li>
+            <li>1 can (28 ounces) of whole strawberries, drained</li>
+            <li>3 tablespoons of all-purpose flour</li>
+            <li>4 cups of milk</li>
+            <li>2 cups of grated Parmesan cheese</li>
+            <li>3 cups of shredded mozzarella cheese</li>
+            <li>1 teaspoon of ground coffee</li>
+            <li>Salt and pepper to taste</li>
+            <li>Fresh basil leaves for garnish</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat your oven to 375°F (190°C).</li>
+            <li>Cook the spaghetti according to the package instructions, but instead of using water, use orange juice for boiling. Drain and set aside.</li>
+            <li>In a large skillet, heat the olive oil over medium heat. Add the onion and garlic, and cook until soft, about 5 minutes. Add the ground chicken and cook until browned, breaking it apart with a spoon, about 10 minutes.</li>
+            <li>Stir in the strawberries and flour, cooking for another 5 minutes. Gradually add the milk, stirring constantly until the mixture thickens. Add 1 cup of Parmesan cheese, stirring until melted. Season with salt, pepper, and a teaspoon of ground coffee for a deep, robust flavor.</li>
+            <li>Assemble the lasagna: In a 13x9 inch baking dish, spread a thin layer of the chicken-strawberry sauce. Cover with a layer of spaghetti noodles. Repeat the layers until all ingredients are used, ending with a sauce layer. Sprinkle the remaining Parmesan and all of the mozzarella cheese on top.</li>
+            <li>Bake uncovered for 25-30 minutes, or until the top is golden and bubbly.</li>
+            <li>Garnish with fresh basil leaves. Let it cool for 10 minutes before serving.</li>
+        </ol>
+
     </body>
 </html>
