added alt text to images

--- a/recipes/kfc.html
+++ b/recipes/kfc.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Korean Fried Chicken Burger Recipe</h1>
         <h2>Its never been easier to enjoy a burger at home</h2>
-        <img src="../images/kfc.webp" height = "250" width = "250">
+        <img src="../images/kfc.webp" height = "250" width = "250" alt="A fried chicken burger with whipped cream and a donut bun">
         <p>This recipe blends sweet, savory, and spicy flavors in a way you've never imagined. Bon Appétit!</p>
         <h2>Ingredients:</h2>
         <ul>
