--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Lasagna</h1>
         <h2>The italian classic, lovingly prepared without any humans harmed</h2>
-        <img src="../images/lasagna.webp" height = "250" width = "250">
+        <img src="../images/lasagna.webp" height = "250" width = "250" alt="A lasagna surrounded by bowls of its constituent ingredients, notice the lack of human meat">
         <p>Prepare this easy homemade lasagne ahead of time and save in the freezer, uncooked, for when you need it during a busy week. Just bake for an extra 45 mins. We are proud to bringing you recipes that are confirmed to contain no human meat.</p>
         <h2>Ingredients</h2>
         <ul>
