--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Pizza</h1>
         <h2>A modern twist on the italian classic</h2>
-        <img src="../images/pizza.webp" height = "250" width = "250">
+        <img src="../images/pizza.webp" height = "250" width = "250" alt="A tasty looking pizza garnished with marshmallows, bananas and popcorn">
         <p>Enjoy this culinary adventure that challenges the boundaries of traditional pizza!</p>
         <h2>Ingredients:</h2>
         <ul>
